@@ -1,3 +1,7 @@
+2004-11-14  Per Bothner  <per@bothner.com>
+
+	* Interpreter.java (defProcStFld): Two new methods.
+
 2004-11-10  Per Bothner  <per@bothner.com>
 
 	* Compilation.java (addClass): If static, name apply_method "$run$",
